		+ Localisation fixed due to duplication error.
	+ Punjab
		+ Renamed to Sarkar-i to better fit with Sikh lore.
		+ Patiala renamed to Punjab.
		+ Golden Temple has now been moved to Khambat.
	+ Oman Mission Tree
		+ Oman missions localisation fixed due to the mentions Swahili.
	+  Ghassanids now get arab missions.
	+ Updated country flags to better fit with lore.
		+ Karnata, Multan, Sindh, Lahore
	+ Tamilakam
		+ New event which fires due to low religious unit.
	+ Dacia now has a description for its formation.
	+ India bookmark updated.
	+ Rework the localisation of several province modifiers and they now include descriptions.
	+ German translation updated.
Version 18.0 (yes, FoI is now of age), otherwise known as the "China Patch 2: Electric Boogaloo feat. India and SEA"
	+ Overhaul of the China Superregion! ...again.
		+ New ideas for most countries!
		+ All new sets of missions for Ming, Yuan, Yue, Jin, Min.
		+ Generic Chinese missions for the rest!
		+ Several sets of event chains featuring pretty much all of them!
		+ A few new tags around!
		+ Reorganized releasable cores!
		+ New provincial layout!
		+ Start screens! Lots of start screens!
		+ Renewed Sixiang religion now has pulse events and new modifiers!
		+ Speaking of Sixiang, we vomited it all over China!
		+ New CBs to help you unify China!
		* Changed the existing mechanisms such as governments and decisions to better fit.
	+ Rework of the India Superregion!
		+ New history/provincial layout!
		+ Many new countries!
		+ New government types!
		+ Some countries renamed to better fit the narrative.
		+ Some new missions and ideas.
		+ More Buddhists and Jains! Unfortunately, also more Manichaeans.
		+ Manichaean has now a religioius mechanic church aspect!
		+ Sikhism has been adjusted so it can now spawn in the game and the lore around it has been adjusted.
		+ New religions, Sarnaism and Sanamahism!
		+ Sanamahism uses the dieties mechanic.
		+ New Indian cultures
		* Forts adjusted