@@ -369,10 +369,16 @@
  foi_nestorian_rand.5.t:0 "Silk Road Bandits Demand Toll"
  foi_nestorian_rand.5.d:0 "A bandit gang claiming dominion over a section of the Silk Road has demanded that we pay a toll in exchange for the safe passage of our itinerant bishop. Obviously, the life of our bishop is of the highest importance to us, but these bandits are poorly armed and undisciplined. We may be able to make a break for it..."
  foi_nestorian_rand.5.a:0 "Pay them."
+ foi_nestorian_rand.5.a.tt.1:0 "The bandits keep to their word."
+ foi_nestorian_rand.5.a.tt.2:0 "The bandits have lied and the bishop has been killed!"
+ foi_nestorian_rand.5.a.tt.3:0 "The bandits have lied but the bishop escapes!"
+ foi_nestorian_rand.5.a.tt.4:0 "The bandits have lied and the envoy has been defeated!"
+ foi_nestorian_rand.5.a.tt.5:0 "The bandits have lied but they have been defeated!"
  foi_nestorian_rand.5.b:0 "Settle this issue not with coin, but with steel."
  foi_nestorian_rand.5.b.tt.1:0 "The bandits are defeated!"
  foi_nestorian_rand.5.b.tt.2:0 "The bishop and his escort escape!"
  foi_nestorian_rand.5.b.tt.3:0 "The bishop and his escort are killed!"
+ foi_nestorian_rand.5.b.tt.4:0 "The bishop convinced the bandits to give his escort save passage."
  foi_nestorian_rand.6.t:0 "Bishop arrives safely!"
  foi_nestorian_rand.6.d:0 "God is with us! Our new bishop has made the trek from Mahuza to [Root.Capital.GetName] safely, and is now getting accustomed to his new home and fellow holy men."
  foi_nestorian_rand.6.a:0 "Hallelujah!"
