@@ -11,12 +11,13 @@ Version 1.18.1 India Patch
 		+ Oman missions localisation fixed due to the mentions Swahili.
 	+  Ghassanids now get arab missions.
 	+ Updated country flags to better fit with lore.
-		+ Karnata, Multan, Sindh, Lahore
+		+ Karnata, Multan, Sindh, Lahore, Mazandaran
 	+ Tamilakam
 		+ New event which fires due to low religious unit.
 	+ Dacia now has a description for its formation.
 	+ India bookmark updated.
 	+ Rework the localisation of several province modifiers and they now include descriptions.
+	+ Fixed Nestorian event for the arrival of a new bishop
 	+ German translation updated.
 Version 18.0 (yes, FoI is now of age), otherwise known as the "China Patch 2: Electric Boogaloo feat. India and SEA"
 	+ Overhaul of the China Superregion! ...again.
